--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.4.0",
     "apexcharts": "^3.24.0",
+    "axios": "^0.25.0",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.9",
+    "material-table": "^1.69.3",
     "mui-datatables": "^3.7.4",
     "react": "^16.14.0",
     "react-apexcharts": "^1.3.7",
@@ -27,7 +30,9 @@
     "react-syntax-highlighter": "^15.4.3",
     "react-toastify": "^7.0.3",
     "recharts": "^2.0.4",
-    "tinycolor2": "^1.4.2"
+    "tinycolor2": "^1.4.2",
+    "xlsx": "^0.18.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
